--- a/Temporaire/web/WEB-INF/web.xml
+++ b/Temporaire/web/WEB-INF/web.xml
@@ -10,9 +10,8 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>FrontServlet</servlet-name>
-        <url-pattern>/FrontServlet</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
-    
     
     
     <servlet>
