--- a/Temporaire/nbproject/project.properties
+++ b/Temporaire/nbproject/project.properties
@@ -27,6 +27,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=lib/commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.2.jar=lib/commons-collections-3.2.2.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.JFramework.jar=lib/JFramework.jar
 includes=**
 j2ee.compile.on.save=true
@@ -37,7 +40,10 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JFramework.jar}
+    ${file.reference.JFramework.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-logging-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
